data/derived/sp14/progs/unify/prog2786.ml.out
Characters 82-95:
  List.fold_left f base (List.rev fs);;
                        ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type ('a list -> 'b -> 'b) list
       The type variable 'a occurs inside 'a list -> 'b -> 'b
